# melange

./: .gitignore  CMakeLists.txt  README.md
cmake/: AppendArgs.cmake  FindGtk3.cmake  FindLibNotify.cmake  FindWebKit2Gtk.cmake
res/js/: telegram.js  whatsapp.js
res/ui/: app.glade  mainwindow.css  mainwindow.glade
src/: app.c  app.h  config.c  config.h  config.l  config.y  main.c  mainwindow.c  mainwindow.h  melange.desktop.in  presets.c  presets.h  util.c  util.h
